--- a/PlannerA.csproj
+++ b/PlannerA.csproj
@@ -14,7 +14,7 @@
 
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.*"/>
-        <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.2.3" />
+        <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.*" />
         <PackageReference Include="Avalonia.Desktop" Version="11.*"/>
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.*"/>
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.*"/>
@@ -23,9 +23,9 @@
             <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
             <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.3"/>
-        <PackageReference Include="Northwoods.GoDiagram.Avalonia" Version="10.0.12" />
-        <PackageReference Include="ReactiveUI.Fody" Version="19.5.41"/>
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.*"/>
+        <PackageReference Include="Northwoods.GoDiagram.Avalonia" Version="10.*" />
+        <PackageReference Include="ReactiveUI.Fody" Version="19.*"/>
     </ItemGroup>
 
     <ItemGroup>
